--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,12 @@
 # Database configuration
+# para visualizar o console do h2 entre na url
+## localhost:8080/h2-console
+
 spring:
   datasource:
     url: jdbc:h2:mem:appfinancas
-    username: sa
-    password:
+    username: admin
+    password: 123
   h2:
     console:
       enabled: true
