--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 # Database configuration
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/appfinancas
+    url: jdbc:postgresql://localhost:5433/appfinancas
     username: postgres
-    password: masterkey
+    password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
